--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>我的图片展示</title>
 </head>
 <body>
-    <img src="demo-image.jpg" alt="展示图片" />
+    <img src="demo-image.png" alt="展示图片" />
 </body>
 </html>
