--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
+
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CJ0YT3SCTK"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-CJ0YT3SCTK');
+    </script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的图片展示</title>
+    <title>mypic</title>
 </head>
+
 <body>
-    <img src="demo-image.png" alt="展示图片" />
+    <img src="demo-image.png" alt="pic片" />
 </body>
 </html>
