--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mypic</title>
+    <title>AI Voice Recorder</title>
 </head>
 
 <body>
-    <img src="demo-image.png" alt="pic片" />
+    <img src="Picture1.png" alt="pic" />
 </body>
 </html>
