--- a/index.html
+++ b/index.html
@@ -14,6 +14,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Voice Recorder</title>
+
+    <style>
+        html, body {
+            height: 100%; /* 使html和body元素占满整个浏览器窗口 */
+            margin: 0; /* 去掉默认的边距 */
+        }
+
+        img {
+            width: 100vw;  /* 图片宽度占满视口宽度 */
+            height: 100vh; /* 图片高度占满视口高度 */
+            object-fit: cover; /* 让图片缩放以覆盖整个区域，同时保持其宽高比例 */
+            object-position: center center; /* 图片居中显示 */
+        }
+    </style>
+
 </head>
 
 <body>
